--- a/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
@@ -5,7 +5,7 @@
              xmlns:model="clr-namespace:MonkeyFinder.Model"
              xmlns:viewmodel="clr-namespace:MonkeyFinder.ViewModel"
              xmlns:ios="clr-namespace:Microsoft.Maui.Controls.PlatformConfiguration.iOSSpecific;assembly=Microsoft.Maui.Controls"
-             x:DataType="viewmodel:MonkeysViewModel" 
+             x:DataType="viewmodel:MonkeysViewModel"
              Title="{Binding Title}"
              ios:Page.UseSafeArea="True"
              x:Class="MonkeyFinder.View.MainPage">
@@ -14,69 +14,71 @@
           ColumnSpacing="5"
           RowDefinitions="*,Auto"
           RowSpacing="0">
-        
-        <CollectionView BackgroundColor="Transparent"
-                        Grid.ColumnSpan="2"
-                        ItemsSource="{Binding Monkeys}"
-                        SelectionMode="None">
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="model:Monkey">
-                    <Grid Padding="10">
-                        <Frame HeightRequest="125"
-                               Padding="0"
-                               Style="{StaticResource CardView}">
-                            <Frame.GestureRecognizers>
-                                <TapGestureRecognizer CommandParameter="{Binding .}"
-                                                      Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}"/>
-                            </Frame.GestureRecognizers>
-                            <Grid Padding="0"
-                                  ColumnDefinitions="125, *">
-                                
-                                <Image Aspect="AspectFill"
-                                       Source="{Binding Image}"
-                                       WidthRequest="125"
-                                       HeightRequest="125"/>
-                                
-                                <VerticalStackLayout Grid.Column="1"
-                                                     Padding="10"
-                                                     VerticalOptions="Center">
-                                    <Label Text="{Binding Name}"
-                                           Style="{StaticResource LargeLabel}"/>
-                                    <Label Text="{Binding Location}"
-                                           Style="{StaticResource MediumLabel}"/>
-                                    <Label Text="{Binding Population, StringFormat='Population: {0}'}"
-                                           Style="{StaticResource SmallLabel}"/>
-                                </VerticalStackLayout>
-                            </Grid>
-                        </Frame>
-                    </Grid>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-            
-        </CollectionView>
-        
+
+        <RefreshView Grid.ColumnSpan="2"
+                     Command="{Binding GetMonkeysCommand}"
+                     IsRefreshing="{Binding IsRefreshing}">
+            <CollectionView BackgroundColor="Transparent"
+                            ItemsSource="{Binding Monkeys}"
+                            SelectionMode="None">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="model:Monkey">
+                        <Grid Padding="10">
+                            <Frame HeightRequest="125"
+                                   Padding="0"
+                                   Style="{StaticResource CardView}">
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer CommandParameter="{Binding .}"
+                                                          Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}" />
+                                </Frame.GestureRecognizers>
+                                <Grid Padding="0"
+                                      ColumnDefinitions="125, *">
+
+                                    <Image Aspect="AspectFill"
+                                           Source="{Binding Image}"
+                                           WidthRequest="125"
+                                           HeightRequest="125" />
+
+                                    <VerticalStackLayout Grid.Column="1"
+                                                         Padding="10"
+                                                         VerticalOptions="Center">
+                                        <Label Text="{Binding Name}"
+                                               Style="{StaticResource LargeLabel}" />
+                                        <Label Text="{Binding Location}"
+                                               Style="{StaticResource MediumLabel}" />
+                                        <Label Text="{Binding Population, StringFormat='Population: {0}'}"
+                                               Style="{StaticResource SmallLabel}" />
+                                    </VerticalStackLayout>
+                                </Grid>
+                            </Frame>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </RefreshView>
+
         <Button Text="Get Monkeys"
                 Style="{StaticResource ButtonOutline}"
                 Command="{Binding GetMonkeysCommand}"
                 IsEnabled="{Binding IsNotBusy}"
                 Grid.Row="1"
-                Margin="8"/>
-        
+                Margin="8" />
+
         <Button Text="Find Closest"
                 Style="{StaticResource ButtonOutline}"
                 Command="{Binding GetClosestMonkeyCommand}"
                 IsEnabled="{Binding IsNotBusy}"
                 Grid.Row="1"
                 Grid.Column="1"
-                Margin="8"/>
-        
+                Margin="8" />
+
         <ActivityIndicator IsVisible="{Binding IsBusy}"
                            IsRunning="{Binding IsBusy}"
                            HorizontalOptions="FillAndExpand"
                            VerticalOptions="CenterAndExpand"
                            Grid.RowSpan="2"
-                           Grid.ColumnSpan="2"/>
-        
+                           Grid.ColumnSpan="2" />
+
     </Grid>
 
 </ContentPage>
