Enhanced MainPage layout and CollectionView
- Added a Grid element to MainPage.xaml with two columns of equal width, column spacing of 5, and row definitions for available space and auto size, with no row spacing.
- Modified CollectionView's SelectionMode to include an EmptyView property set to "Empty", enhancing user experience when no items are present.

--- a/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/View/MainPage.xaml
@@ -9,6 +9,7 @@
              Title="{Binding Title}"
              ios:Page.UseSafeArea="True"
              x:Class="MonkeyFinder.View.MainPage">
+    
 
     <Grid ColumnDefinitions="*,*"
           ColumnSpacing="5"
@@ -20,7 +21,8 @@
                      IsRefreshing="{Binding IsRefreshing}">
             <CollectionView BackgroundColor="Transparent"
                             ItemsSource="{Binding Monkeys}"
-                            SelectionMode="None">
+                            SelectionMode="None"
+                            EmptyView="Empty">
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:Monkey">
                         <Grid Padding="10">
