Initial .NET 9 upgrade

--- a/Community Modules/XAML/Part 2 - Responsibility/Finish/MonkeyFinder/View/MainPage.xaml
+++ b/Community Modules/XAML/Part 2 - Responsibility/Finish/MonkeyFinder/View/MainPage.xaml
@@ -27,7 +27,7 @@
 						<Grid Padding="10" HorizontalOptions="Fill">
 							<Frame HeightRequest="125" Style="{StaticResource CardView}">
 								<Frame.GestureRecognizers>
-									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
+									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, x:DataType=viewmodel:MonkeysViewModel, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
 								</Frame.GestureRecognizers>
 								<Grid Padding="0" ColumnDefinitions="125,*">
 									<Image
