--- a/Community Modules/XAML/Part 4 - Naming/Finish/MonkeyFinder/View/MainPage.xaml
+++ b/Community Modules/XAML/Part 4 - Naming/Finish/MonkeyFinder/View/MainPage.xaml
@@ -29,7 +29,7 @@
 						<Grid Padding="{StaticResource StandardItemPadding}" HorizontalOptions="Fill">
 							<Frame HeightRequest="{StaticResource SmallSquareImageSize}" Style="{StaticResource CardView}">
 								<Frame.GestureRecognizers>
-									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
+									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, x:DataType=viewmodel:MonkeysViewModel, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
 								</Frame.GestureRecognizers>
 								<Grid Padding="0">
 									<Grid.ColumnDefinitions>
