--- a/Part 1 - Displaying Data/MonkeyFinder/App.xaml
+++ b/Part 1 - Displaying Data/MonkeyFinder/App.xaml
@@ -57,12 +57,12 @@
                 <Setter Property="CornerRadius" Value="20"/>
             </Style>
             <Style x:Key="CardView" TargetType="Border">
-        <Setter Property="Stroke" Value="#DDDDDD" />
-        <Setter Property="StrokeThickness" Value="1" />
-        <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
-        <Setter Property="Padding" Value="0" />
-        <Setter Property="Background" Value="{AppThemeBinding Light={StaticResource CardBackground}, Dark={StaticResource CardBackgroundDark}}" />
-    </Style>
+                <Setter Property="Stroke" Value="#DDDDDD" />
+                <Setter Property="StrokeThickness" Value="1" />
+                <Setter Property="StrokeShape" Value="RoundRectangle 10"/>
+                <Setter Property="Padding" Value="0" />
+                <Setter Property="Background" Value="{StaticResource LightBackground}" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
