--- a/Community Modules/XAML/Part 2 - Responsibility/Finish/MonkeyFinder/View/MainPage.xaml
+++ b/Community Modules/XAML/Part 2 - Responsibility/Finish/MonkeyFinder/View/MainPage.xaml
@@ -25,10 +25,10 @@
 				<CollectionView.ItemTemplate>
 					<DataTemplate x:DataType="model:Monkey">
 						<Grid Padding="10" HorizontalOptions="Fill">
-							<Frame HeightRequest="125" Style="{StaticResource CardView}">
-								<Frame.GestureRecognizers>
-									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
-								</Frame.GestureRecognizers>
+							<Border HeightRequest="125" Style="{StaticResource CardView}">
+								<Border.GestureRecognizers>
+									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, x:DataType=viewmodel:MonkeysViewModel, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
+								</Border.GestureRecognizers>
 								<Grid Padding="0" ColumnDefinitions="125,*">
 									<Image
 										Aspect="AspectFill"
@@ -43,7 +43,7 @@
 										<Label Style="{StaticResource MediumLabel}" Text="{Binding Location}" />
 									</VerticalStackLayout>
 								</Grid>
-							</Frame>
+							</Border>
 						</Grid>
 					</DataTemplate>
 				</CollectionView.ItemTemplate>
