--- a/Community Modules/XAML/Part 5 - Custom Types/Finish/MonkeyFinder/View/MainPage.xaml
+++ b/Community Modules/XAML/Part 5 - Custom Types/Finish/MonkeyFinder/View/MainPage.xaml
@@ -29,9 +29,9 @@
 					<DataTemplate x:DataType="model:Monkey">
 						<Grid Padding="{StaticResource StandardItemPadding}" HorizontalOptions="Fill">
 							<s:CardView HeightRequest="{StaticResource SmallSquareImageSize}">
-								<Frame.GestureRecognizers>
-									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
-								</Frame.GestureRecognizers>
+								<Border.GestureRecognizers>
+									<TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, x:DataType=viewmodel:MonkeysViewModel, Path=GoToDetailsCommand}" CommandParameter="{Binding .}" />
+								</Border.GestureRecognizers>
 								<Grid Padding="0">
 									<Grid.ColumnDefinitions>
 										<ColumnDefinition Width="{StaticResource SmallSquareImageSize}" />
