--- a/Finish/MonkeyFinder/View/MainPage.xaml
+++ b/Finish/MonkeyFinder/View/MainPage.xaml
@@ -38,12 +38,12 @@
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="model:Monkey">
                         <Grid Padding="10" HorizontalOptions="Fill">
-                            <Frame HeightRequest="125" Style="{StaticResource CardView}">
-                                <Frame.GestureRecognizers>
+                            <Border HeightRequest="125" Style="{StaticResource CardView}">
+                                <Border.GestureRecognizers>
                                     <TapGestureRecognizer 
-                                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, Path=GoToDetailsCommand}"
+                                                Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MonkeysViewModel}}, x:DataType=viewmodel:MonkeysViewModel, Path=GoToDetailsCommand}"
                                                 CommandParameter="{Binding .}"/>
-                                </Frame.GestureRecognizers>
+                                </Border.GestureRecognizers>
                                 <Grid Padding="0" ColumnDefinitions="125,*">
                                     <Image
                                                 Aspect="AspectFill"
@@ -58,7 +58,7 @@
                                         <Label Style="{StaticResource MediumLabel}" Text="{Binding Location}" />
                                     </VerticalStackLayout>
                                 </Grid>
-                            </Frame>
+                            </Border>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
